improve site.url,update structure.txt,update email

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
       <div class="banner-avatar">
         <a href="/">
           <img
-            src= ../static/images/abbas8.jpg
+            src= "{{ site.url }}/static/images/abbas8.jpg"
             title="Abbas Tariverdi"
             alt="Abbas Tariverdi" />
         </a>
