--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -11,7 +11,7 @@
 <meta property="og:image:height" content="500">
 <meta property="og:image:width" content="200">
 {% else %}
-<meta property="og:image" content="https://www.gravatar.com/avatar/545f7c7f0ed11d6ef21722a7e6c47acf?s=600">
+<meta property="og:image" content="{{ site.url }}/static/images/abbas8.jpg">
 <meta property="og:image:height" content="600">
 <meta property="og:image:width" content="600">
 {% endif %}
@@ -26,7 +26,7 @@
 {% if page.image %}
 <meta name="twitter:image:src" content="{{ site.url }}/{{ page.image }}">
 {% else %}
-<meta name="twitter:image:src" content="https://www.gravatar.com/avatar/545f7c7f0ed11d6ef21722a7e6c47acf?s=600">
+<meta name="twitter:image:src" content="{{ site.url }}/static/images/abbas8.jpg">
 {% endif %}
 <meta name="twitter:site" content="https://abbasta.com">
 <meta name="twitter:title" content="{{ page.title }} - Abbas Tariverdi (abbast)">
