--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,3 +1,5 @@
+<link rel="canonical" href="{{ site.url }}{{ page.url }}" />
+
 <!-- meta -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
